# CmakeTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  build_libyuv_aar.sh  gradle.properties  setenv-android.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/test/buglyversion/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cmake/: Common.cmake  FindLibUV.cmake  FindOpenSSL.cmake  GetGitVersion.cmake  QciBuild.cmake  Test.cmake  Version.cmake
app/src/main/cpp/: .gitignore  CMakeLists.txt  git_version.h  git_version.h.in  native-lib.cpp  so_file_version.h  version.h
app/src/main/java/com/mgg/test/: MainActivity.kt
app/src/main/java/com/test/buglyversion/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shell/: test.sh
app/src/test/java/com/test/buglyversion/: ExampleUnitTest.kt
base/: build.gradle
base/src/main/cpp/: CMakeLists.txt  assert.hpp  base.cpp  base32.cc  base32.h  base64.cc  base64.h  eintr_wrapper.h  library_loader.cc  log_level.h  log_settings.cc  log_settings.h  log_settings_state.cc  logging.cc  logging.h  macros.h  string_conversion.cc  string_conversion.h  thread_local.cc  thread_local.h
base/src/main/cpp/common/: CallbackHandler.cpp  CallbackHandler.h  CallbackUtils.cpp  CallbackUtils.h  NioUtils.cpp  NioUtils.h  VirtualMachineEnv.cpp  VirtualMachineEnv.h  compiler.h  debug.cpp  debug.h  macros.h
base/src/main/cpp/curl/: curl_api.cc  curl_api.h  curl_header_parser.cc  curl_header_parser.h  curl_http_client.cc  curl_http_client.h  curl_http_request_handle.cc  curl_http_request_handle.h  curl_http_response.cc  curl_http_response.h  future.h  http_client.h  http_client_util.cc  http_client_util.h  in_memory_request_response.cc  in_memory_request_response.h  interruptible_runner.cc  interruptible_runner.h  monitoring.h  move_to_lambda.h  scheduler.cc  scheduler.h  unique_value.h
base/src/main/cpp/flatbuffers/: CMakeLists.txt
base/src/main/cpp/jni/: embedded_file.h  java_exception_thrower.cpp  java_exception_thrower.hpp  jni_util.cc  jni_util.h  jni_utils.cpp  jni_weak_ref.cc  jni_weak_ref.h  jobject_reference.cc  jobject_reference.h  scoped_java_ref.cc  scoped_java_ref.h  util_android.cc  util_android.h
base/src/main/cpp/jni/string/: jni_string.cpp  jni_string.h
base/src/main/cpp/json/: JSON.cpp  JSON.h  JSONGenerator.h  same.cpp  same.h
base/src/main/cpp/string/: StdStringExtractor.cpp  StdStringExtractor.h  ref_counted_string.cc  ref_counted_string.h  string_convert.cpp  string_convert.h
base/src/main/cpp/synchronization/: atomic_object.h  count_down_latch.cc  count_down_latch.h  semaphore.cc  semaphore.h  shared_mutex.h  shared_mutex_std.cc  shared_mutex_std.h  sync_switch.cc  sync_switch.h  waitable_event.cc  waitable_event.h
base/src/main/cpp/time/: chrono_timestamp_provider.cc  chrono_timestamp_provider.h  time_delta.h  time_point.cc  time_point.h  timestamp_provider.h
base/src/main/cpp/util/: event_loop.cpp  event_loop.hpp  event_loop_dispatcher.hpp  function_ref.hpp  functional.hpp  looper.cc  looper.h  optional.hpp  scheduler.cpp  scheduler.hpp  scope_exit.hpp  type_traits.hpp  version_id.hpp
base/src/main/cpp/util/android/: scheduler.hpp
base/src/main/cpp/util/generic/: scheduler.hpp
base/src/main/cpp/util/uv/: scheduler.hpp
base/src/main/cpp/variant/: jni_variant_util.cc  variant.cc  variant.h  variant_util.cc  variant_util.h
base/src/main/java/com/mgg/base/: JNIUtils.java  NativeLib.kt  NioUtils.java  OsUtils.kt
cmake/: GetGitVersion.cmake  Test.cmake  Version.cmake
gradle/wrapper/: gradle-wrapper.properties
